<resources>
    <string name="pubquiz">YAY</string>
    <string name="registerButton">Skrá</string>
    <string name="edRoomName">Nafn Herbergis</string>
    <string name="teamName">Nafn liðs</string>
    <string name="text_question">this is a question</string>
    <string name="text_question_text">Spurning: </string>
    <string name="text_question_nr">X breyta</string>
    <string name="text_team">Lið </string>
    <string name="text_teamnr">liðbreyta</string>
    <string name="text_quiz">í quiz </string>
    <string name="text_quiz_name">wonderquiz</string>
    <string name="text_team_Reg">Innskráning í pub quiz</string>
    <string name="app_name">pubQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_answer_question">AnswerQuestionActivity</string>
    <string name="question_number">Spurning %1$d</string>
    <string name="answer_button">Svara</string>
    <string name="take_barcode_picture">Taka mynd af QR</string>
    <string name="scan_barcode">Skanna QR kóða</string>
    <string name="leaveQuizButton">Hætta keppni</string>
    <string name="room_name_hint">Herbergi</string>
    <string name="team_name_hint">Lið</string>
    <string name="qrCodeText">Skannaðu QR kóða</string>
    <string name="question_switch_toast">Spyrillinn hefur skipt yfir á spurningu nr. %1$d</string>
    <string name="quit_quiz_dialog_title">Hætta leik</string>
    <string name="quit_quiz_dialog_text">Með því að ýta á OK yfirgefur þú núverandi leik og liði þínu verður eytt.</string>
    <string name="correctButtonText">Rétt</string>
    <string name="incorrectButtonText">Rangt</string>
    <string name="answerLabelText">Svar</string>
    <string name="appHeader">pubQuiz</string>
    <string name="waitText">Vinsamlegast bíðið\npubQuiz hefst innan skamms</string>
    <string name="aboutText">pubQuiz er búið til af "The Fantastic Four" fyrir Hugbúnaðarverkefni 2 HBV601G í Háskóla Íslands.\n\nÞakkir:\nAnimation icon \'ninja\' is provided by loading.io\n\nIcons made by Vaadin from www.flaticon.com is licenced by CC 3.0.</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
</resources>
