<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="is.hi.hbv601.pubquiz.ReviewFragment">

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignStart="@+id/questionText"
        android:textAlignment="textStart"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/questionNumber"
        android:autoSizeMaxTextSize="28dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionText"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/answerLabelText"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/questionAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/answerLabel"
        android:autoSizeMaxTextSize="28dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/questionAnswer"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/correctButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/correctButtonText" />

        <Button
            android:id="@+id/incorrectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/incorrectButtonText" />
    </LinearLayout>

</RelativeLayout>
